--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
           Token Contract
         </div>
         <p class="wuffi-token-contract valign-text-middle ubuntu-normal-black-rock-22px" data-id="0:28">
-          <span class="text-link"><span class="span0-NSomfx ubuntu-normal-black-rock-22px">Wuffi token contract on WAX:&nbsp;</span><a
-              href="https://waxblock.io/account/wuffi" target="_blank"><span class="span1-NSomfx"
+          <span class="text-link"><span class="span0-NSomfx ubuntu-normal-black-rock-22px">Wuffi token contract on
+              WAX:&nbsp;</span><a href="https://waxblock.io/account/wuffi" class="tag-link" target="_blank"><span class="span1-NSomfx"
                 data-hotspot-id="hp-0">https://waxblock.io/account/wuffi</span></a></span>
         </p>
         <p class="wuffi-token-contract valign-text-middle ubuntu-normal-black-rock-22px" data-id="0:29">
           <span class="text-link"><span class="span0-tSIsx5 ubuntu-normal-black-rock-22px">Wuffi token contract on
-              Solana:&nbsp;</span><a href="https://solscan.io/token/73xsLcBnLnc9bh81cqVKqj8uEyiarXng5ZwJuTbnVebG"
+              Solana:&nbsp;</span><a class="tag-link" href="https://solscan.io/token/73xsLcBnLnc9bh81cqVKqj8uEyiarXng5ZwJuTbnVebG"
               target="_blank"><span class="span1-tSIsx5"
                 data-hotspot-id="hp-1">https://solscan.io/token/73xsLcBnLnc9bh81cqVKqj8uEyiarXng5ZwJuTbnVebG</span></a></span>
         </p>
