--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         </div>
         <p class="wuffi-token-contract valign-text-middle ubuntu-normal-black-rock-22px" data-id="0:28">
           <span class="text-link"><span class="span0-NSomfx ubuntu-normal-black-rock-22px">Wuffi token contract on
-              WAX:&nbsp;</span><a href="https://waxblock.io/account/wuffi" class="tag-link" target="_blank"><span class="span1-NSomfx"
+              WAX:&nbsp;</span><a href="https://waxblock.io/account/wuffi" class="tag-link" target="_blank"><span class="span1-NSomfx tag-link"
                 data-hotspot-id="hp-0">https://waxblock.io/account/wuffi</span></a></span>
         </p>
         <p class="wuffi-token-contract valign-text-middle ubuntu-normal-black-rock-22px" data-id="0:29">
           <span class="text-link"><span class="span0-tSIsx5 ubuntu-normal-black-rock-22px">Wuffi token contract on
               Solana:&nbsp;</span><a class="tag-link" href="https://solscan.io/token/73xsLcBnLnc9bh81cqVKqj8uEyiarXng5ZwJuTbnVebG"
-              target="_blank"><span class="span1-tSIsx5"
+              target="_blank"><span class="span1-tSIsx5 tag-link"
                 data-hotspot-id="hp-1">https://solscan.io/token/73xsLcBnLnc9bh81cqVKqj8uEyiarXng5ZwJuTbnVebG</span></a></span>
         </p>
       </div>
