--- a/index.html
+++ b/index.html
@@ -10,33 +10,34 @@
 
 <body>
   <div class="container-center-horizontal">
-    <div class="header-screen-bg"></div>
-    <div class="header-screen">
-      <div class="div-header-section">
-        <div class="div-header-section-text">
-          <div class="text-logo">
-            <div class="next-gen-meme-coin-OlwM73" data-id="0:8">
-              NEXT GEN MEME COIN
+    <div class="header-screen-bg">
+      <div class="header-screen">
+        <div class="div-header-section">
+          <div class="div-header-section-text">
+            <div class="text-logo">
+              <div class="next-gen-meme-coin-OlwM73" data-id="0:8">
+                NEXT GEN MEME COIN
+              </div>
+              <img class="logo-wuffi-wordmark"
+                src="https://cdn.animaapp.com/projects/64df22578bd173e193424f36/releases/661363fed3ad572583626494/img/5f923999-logo-wuffi-wordmark-whitetm-svg.svg"
+                anima-src="https://cdn.animaapp.com/projects/64df22578bd173e193424f36/releases/661363fed3ad572583626494/img/5f923999-logo-wuffi-wordmark-whitetm-svg.svg"
+                alt="5f923999-logo-wuffi-wordmark-whitetm.svg" />
             </div>
-            <img class="logo-wuffi-wordmark"
-              src="https://cdn.animaapp.com/projects/64df22578bd173e193424f36/releases/661363fed3ad572583626494/img/5f923999-logo-wuffi-wordmark-whitetm-svg.svg"
-              anima-src="https://cdn.animaapp.com/projects/64df22578bd173e193424f36/releases/661363fed3ad572583626494/img/5f923999-logo-wuffi-wordmark-whitetm-svg.svg"
-              alt="5f923999-logo-wuffi-wordmark-whitetm.svg" />
+            <div class="text-description">
+              <p class="strong-bark-your-calendars-for-2024-OlwM73 strong-bark-your-calendars-for-2024">
+                <span><span class="span0-fxe3vS">Bark your calendars for 2024!&nbsp;</span><span
+                    class="span1-fxe3vS">WUFFI, the next-gen meme<br />coin crafted for gamers, is
+                    wagging its tail on the Solana &amp;<br />WAX Blockchains,
+                    eagerly sniffing out active wallets in the<br />WUFFI
+                    ecosystem for a free, fur-tastic airdrop.&nbsp;</span></span>
+              </p>
+              <p class="get-ready-for-a-gami-OlwM73">
+                Get ready for a gaming-centered journey with WUFFI!
+              </p>
+            </div>
           </div>
-          <div class="text-description">
-            <p class="strong-bark-your-calendars-for-2024-OlwM73 strong-bark-your-calendars-for-2024">
-              <span><span class="span0-fxe3vS">Bark your calendars for 2024!&nbsp;</span><span
-                  class="span1-fxe3vS">WUFFI, the next-gen meme<br />coin crafted for gamers, is
-                  wagging its tail on the Solana &amp;<br />WAX Blockchains,
-                  eagerly sniffing out active wallets in the<br />WUFFI
-                  ecosystem for a free, fur-tastic airdrop.&nbsp;</span></span>
-            </p>
-            <p class="get-ready-for-a-gami-OlwM73">
-              Get ready for a gaming-centered journey with WUFFI!
-            </p>
-          </div>
+          <div class="wuffi-token"></div>
         </div>
-        <div class="wuffi-token"></div>
       </div>
     </div>
   </div>
