wuffi to the moon

--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
         data-id="0:25">
         Wuffi Crypto™ | Home | Official Site
       </h1>
-      <div class="frame-1-nSXazb frame-1" data-id="0:26">
+      <div class="frame-1-nSXazb frame-1 frame-133848-nSXazb" data-id="0:26">
+        <div class="token-contract-ULxu5w valign-text-middle ubuntu-bold-black-rock-32px" data-id="0:27">
+          Website
+        </div>
+        <p class="wuffi-token-contract valign-text-middle ubuntu-normal-black-rock-22px" data-id="0:28">
+          <span class="text-link"><span class="span0-NSomfx ubuntu-normal-black-rock-22px">URL:&nbsp;</span><a href="https://wuffi.io" class="tag-link" target="_blank"><span class="span1-NSomfx tag-link"
+                data-hotspot-id="hp-0">https://wuffi.io</span></a></span>
+        </p>
+      </div>
+      <div class="frame-1-nSXazb frame-1 frame-133848-nSXazb" data-id="0:26">
         <div class="token-contract-ULxu5w valign-text-middle ubuntu-bold-black-rock-32px" data-id="0:27">
           Token Contract
         </div>
